* improve dark mode code style and fix image icon color in navbar.

--- a/styles/black.css
+++ b/styles/black.css
@@ -6,6 +6,8 @@
  * Copyright (c) 2019 https://github.com/catouse; Licensed MIT
  * ========================================================= */
 
+@import './dark-code.css';
+
 body {
     --color-fore: #fff;
     --color-back: #262626;
@@ -209,10 +211,6 @@ code {
     color: var(--color-fore, #333) !important;
     box-shadow: none !important;
     /* border-right: 1px solid var(--color-border, #eee)!important; */
-}
-
-.app-navbar .nav-item .avatar img {
-    filter: brightness(0.2);
 }
 
 .app-navbar .block,
